# levenia-shop-bot

./: .env.example  .gitignore  .taplo.toml  README.md  alembic.ini  docker-compose-local.yaml  justfile  pyproject.toml
bot/: config.py  errors.py  filters.py  main.py  utils.py
bot/db/: core.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 1725181601_c4ec56b2b889_create_users_table.py  1725196503_03467f031394_add_role_to_users.py  1725433315_9196f6e0c735_create_referrals_table.py  1725476181_a3b4d62e6d60_create_bonuses_table.py  1725477642_68dcee4c1c2f_add_bonus_id_to_referrals.py  1725478806_ec5d6965d17f_add_username_to_users.py  1725547207_ef63353d87f5_change_type_of_tg_ids.py  1725551293_ca423088bd92_create_products_table.py  1725556005_2dadc3573ecf_add_creator_tg_id_to_products.py  (+4 more)
bot/db/models/: __init__.py  base.py  bonus.py  order.py  order_item.py  product.py  product_variant.py  referral.py  user.py
bot/db/queries/: bonus.py  product.py  product_variant.py  referral.py  user.py
bot/filters/: role.py
bot/handlers/: __init__.py  buttons.py  commands.py
bot/handlers/buttons/: __init__.py  client.py  manager.py
bot/handlers/surveys/: __init__.py  add_product.py  add_product_variant.py  change_role.py  delete_product.py  delete_product_variant.py
bot/keyboards/: change_role.py  root.py  select_product_gender.py
bot/keyboards/inline/: change_role.py  select_product_gender.py  skip_survey_step.py
bot/keyboards/reply/: cancel_survey.py  change_role.py  root.py  select_product_gender.py
bot/middlewares/: auth.py
