[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pre-commit = "^3.8.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D1", "D203", "D212", "COM812", "ISC001"]
