[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
aiogram = "^3.12.0"
inflect = "^7.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pre-commit = "^3.8.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D1",
  "D203",
  "D213",
  "FIX",
  "INP",
  "ISC001",
  "TD002",
  "TD003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
